# RtsuStudentsBot

./: LICENCE  README.md  pyproject.toml  requirements.txt  settings.json
rtsu_students_bot/: __init__.py  __main__.py  cli.py  config.py  constants.py  database.py  settings.py  template_engine.py
rtsu_students_bot/bot/: __init__.py  app.py  core.py  dispatcher.py  main.py  states.py  templates.py
rtsu_students_bot/bot/filters/: __init__.py  auth.py
rtsu_students_bot/bot/handlers/: __init__.py  callback_query.py  commands.py  core.py  errors.py  startup.py  text.py
rtsu_students_bot/bot/keyboards/: __init__.py  callbacks.py  inline.py  reply.py
rtsu_students_bot/bot/middlewares/: __init__.py  resources_middleware.py  user_middleware.py
rtsu_students_bot/common/schemas/: __init__.py
rtsu_students_bot/models/: user.py
rtsu_students_bot/rtsu/: __init__.py  api.py  exceptions.py
rtsu_students_bot/rtsu/schemas/: __init__.py  academic_year.py  auth.py  profile.py  subject.py
rtsu_students_bot/server/: app.py  database.py
rtsu_students_bot/server/models/: base.py  user.py
rtsu_students_bot/server/routers/: users.py
rtsu_students_bot/service/: __init__.py  exceptions.py  user.py
rtsu_students_bot/templates/: about.html  already_authorized.html  auth.html  auth_error.html  auth_success.html  cancellation.html  credentials_confirmation.html  enter_password.html  help.html  logout.html  not_authorized.html  profile.html  server_error.html  start.html  statistics.html  subject.html
tests/: config.py  crud_test.py  rstu_api_test.py
(+5 files in other folders)
